<resources>
    <string name="app_name">ECommerce</string>
    <string name="make_nyour_style_ncome_ntrue_here">Make\nYour Style\nCome\nTrue Here</string>
    <string name="go">Go</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="tamer">Tamer</string>
    <string name="welcome_back">Welcome,Back</string>
    <string name="recommendation">Recommendation</string>
    <string name="see">See</string>
    <string name="see_all">See all</string>
</resources>